--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unit_test:
-    name: Unit Test
+  test:
+    name: Test
     runs-on: macos-14
     env:
       DEVELOPER_DIR: "/Applications/Xcode_16.app/Contents/Developer"
@@ -22,10 +22,20 @@ jobs:
       - name: Show Xcode Version
         run: xcodebuild -version
 
-      - name: Run Tests
+      - name: Run Unit Tests
         run: |
           xcodebuild test \
             -project Examples/Examples.xcodeproj \
             -scheme Examples \
+            -only-testing:WebUITests \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=18.0" \
-            -resultBundlePath TestResults/result_bundle
+            -resultBundlePath TestResults/unit_test_result_bundle
+
+      - name: Run UI Tests
+        run: |
+          xcodebuild test-without-building \
+            -project Examples/Examples.xcodeproj \
+            -scheme Examples \
+            -only-testing:ExamplesUITests \
+            -destination "platform=iOS Simulator,name=iPhone 15,OS=18.0" \
+            -resultBundlePath TestResults/ui_test_result_bundle
