--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,15 +32,17 @@ jobs:
             -scheme Examples \
             -only-testing:WebUITests \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=18.0" \
+            -derivedDataPath DerivedData \
             -resultBundlePath TestResults/unit_test_result_bundle | \
             xcbeautify && exit ${PIPESTATUS[0]}
 
       - name: Run UI Tests
         run: |
-          xcodebuild test \
+          xcodebuild test-without-building \
             -project Examples/Examples.xcodeproj \
             -scheme Examples \
             -only-testing:ExamplesUITests \
             -destination "platform=iOS Simulator,name=iPhone 15,OS=18.0" \
+            -derivedDataPath DerivedData \
             -resultBundlePath TestResults/ui_test_result_bundle | \
             xcbeautify && exit ${PIPESTATUS[0]}
